--- a/stylesheet.css
+++ b/stylesheet.css
@@ -152,3 +152,35 @@ hr {
   margin-top: 50px;
   margin-bottom: 50px;
 }
+
+@media only screen and (min-width: 600px) {
+  .table-image {
+    padding:2%;
+    width:50%;
+    vertical-align:middle;
+  }
+  .table-text {
+    padding:2%;
+    width:50%;
+    vertical-align:middle;
+  }
+  .table-image-row {
+    display: none;
+  }
+}
+@media only screen and (max-width: 600px) {
+  .table-image {
+    display: none;
+  }
+  .table-text {
+    padding:2%;
+    width:100%;
+    vertical-align:middle;
+    padding-top: 7.5%;
+  }
+  .table-image-row {
+    width: 100%;
+    padding-bottom: 7.5%;
+    border-bottom: 1px solid rgb(196, 195, 195);
+  }
+}
